--- a/PNC/units.html
+++ b/PNC/units.html
@@ -3,15 +3,8 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
-            import { AsyncFunc } from "/univasset/scripts/externaljavascript.js";
+            import { AsyncFunc, initializeHTML } from "/univasset/scripts/externaljavascript.js";
             const list = document.createElement('dl');
-
-            function initializeHTML(createElement, attributes) {
-                const temp = document.createElement(createElement);
-                for (const [attrib, value] of Object.entries(attributes))
-                    temp[attrib] = value;
-                return temp;
-            }
 
             for (const {name, reference} of (await AsyncFunc.getJSON('./units.json')).slice(0, -1)) {
                 //name
@@ -22,13 +15,8 @@
                 //reference
                 for (const [referenceName, link] of Object.entries(reference)) {
                     if (referenceName) {
-                        const a = initializeHTML('a', {textContent: referenceName, href: link})
-                        //const a = document.createElement('a');
-                        //a.textContent = referenceName;
-                        //a.href = link;
-
                         const refs = document.createElement('dd');
-                        refs.appendChild(a);
+                        refs.appendChild(initializeHTML('a', {textContent: referenceName, href: link}));
                         list.appendChild(refs);
                     }
                 }
