--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -3,11 +3,11 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
-            import {AsyncFunc, zip, enumerate} from '/univasset/scripts/externaljavascript.js';
+            import {AsyncFunc, zip, enumerate, initializeHTML} from '/univasset/scripts/externaljavascript.js';
 
             const jsonObject = await AsyncFunc.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
             const tbody = document.createElement('tbody');
-            var elite = new Set(), nonelite = new Set();//, rows = "";
+            var elite = new Set(), nonelite = new Set();
 
             for (const units of jsonObject)
                 (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
@@ -15,26 +15,19 @@
             for (const [index, [unitE, unitNE]] of enumerate(zip(true, elite, nonelite))) {
                 const trElem = document.createElement('tr');
 
-                const tdIndex = document.createElement('td');
-                tdIndex.textContent = index + 1;
+                const td = [
+                    initializeHTML('td', {textContent: index + 1}),
+                    initializeHTML('td', {textContent: unitE}),
+                    initializeHTML('td', {textContent: unitNE ?? ''})
+                ]
 
-                const tdElite = document.createElement('td');
-                tdElite.textContent = unitE;
-
-                const tdNElite = document.createElement('td');
-                tdNElite.textContent = unitNE ?? '';
-
-                for (const elements of [tdIndex, tdElite, tdNElite])
+                for (const elements of td)
                     trElem.appendChild(elements);
 
                 tbody.appendChild(trElem);
             }
 
             document.querySelector('table').appendChild(tbody);
-
-            //rows += `<tr><td>${index + 1}</td><td>${unitE}</td><td>${unitNE ?? ''}</td></tr>`;
-
-            //document.getElementsByTagName('tbody')[0].innerHTML = rows;
         </script>
 
         <meta charset='utf-8'>
