--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -128,7 +128,7 @@
                             <td>54</td>    <!-- Offense 2 Slot Main Stat -->
                             <td>32</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td>27</td>    <!-- Offense 1 Slot Main Stat -->
-                            <td></td>    <!-- Offense 1 Slot Sub Stat -->
+                            <td>32</td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td>32</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
