--- a/PNC/units.html
+++ b/PNC/units.html
@@ -20,7 +20,8 @@
                 }
 
                 //fragments
-                list.appendChild(initializeHTML('dd', {textContent: `Fragment Locations: ${fragments.join(', ')}`}));
+                if (fragments)
+                    list.appendChild(initializeHTML('dd', {textContent: `Fragment Locations: ${fragments.join(', ')}`}));
             }
             
             document.getElementById('main_content').appendChild(list);
@@ -51,26 +52,6 @@
 
         <div class="container">
             <section id="main_content">
-                <!--table>
-                    <thead>
-                        <tr>
-                            <th rowspan="3" colspan="2">Algorithm Stats</th>
-                            <th colspan="4">Offense</th>
-                            <th colspan="4">Stability</th>
-                            <th colspan="4">Special</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td rowspan="2">Max HP</td>
-                            <td>Flat</td>
-                            <td></td>
-                            <td>1080</td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table-->
             </section>
         </div>
     </body>
