--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -6,22 +6,21 @@
             import {AsyncFunc, zip, enumerate, initializeHTML} from '/univasset/scripts/externaljavascript.js';
 
             const jsonObject = await AsyncFunc.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
-            const tbody = document.createElement('tbody');
-            var elite = new Set(), nonelite = new Set();
+            const elite = new Set(), nonelite = new Set(), tbody = document.createElement('tbody');
 
-            for (const units of jsonObject)
-                (String(units.passive_skill).includes('200304') ? nonelite : elite).add(units.code)
+            for (const {passive_skill, code} of jsonObject)
+                (String(passive_skill).includes('200304') ? nonelite : elite).add(code)
 
             for (const [index, [unitE, unitNE]] of enumerate(zip(true, elite, nonelite))) {
                 const trElem = document.createElement('tr');
 
-                const td = [
+                const tdElems = [
                     initializeHTML('td', {textContent: index + 1}),
                     initializeHTML('td', {textContent: unitE}),
                     initializeHTML('td', {textContent: unitNE ?? ''})
                 ]
 
-                for (const elements of td)
+                for (const elements of tdElems)
                     trElem.appendChild(elements);
 
                 tbody.appendChild(trElem);
@@ -63,9 +62,7 @@
                             <th>Non-Elites</th>
                         </tr>
                     </thead>
-                    <tbody>
-
-                    </tbody>
+                    <!--tbody></tbody-->
                 </table>
 
                 Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>.
