--- a/PNC/algorithm.html
+++ b/PNC/algorithm.html
@@ -112,7 +112,7 @@
                             <td>12%</td>    <!-- Offense 2 Slot Main Stat -->
                             <td>7.2%</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td>6%</td>    <!-- Offense 1 Slot Main Stat -->
-                            <td></td>    <!-- Offense 1 Slot Sub Stat -->
+                            <td>7.2%</td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td></td>    <!-- Stability 2 Slot Sub Stat -->
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
@@ -298,7 +298,7 @@
                             <td></td>    <!-- Offense 2 Slot Main Stat -->
                             <td>9.6%</td>    <!-- Offense 2 Slot Sub Stat -->
                             <td></td>    <!-- Offense 1 Slot Main Stat -->
-                            <td></td>    <!-- Offense 1 Slot Sub Stat -->
+                            <td>9.6%</td>    <!-- Offense 1 Slot Sub Stat -->
                             <td></td>    <!-- Stability 2 Slot Main Stat -->
                             <td>9.6%</td>    <!-- Stability 2 Slot Sub Stat -->
                             <td></td>    <!-- Stability 1 Slot Main Stat -->
