--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -4,73 +4,43 @@
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
             import { AsyncFunc, initializeHTML } from "/univasset/scripts/externaljavascript.js";
-            const json = (await AsyncFunc.getJSON('./units.json')).slice(0, -1);
+            const json = (await AsyncFunc.getJSON('./unitstats.json')).slice(0, -1);
+
+            table(document.querySelector('#main_content div'), json)
             
-
-            const header = [];
-
-            function sort() {
+            /* function sort() {
 
             }
 
             function loaddata(key = null) {
 
+            } */
+
+            /** @param {HTMLElement} grouperElem
+             * @param {Array[]} tablerows */
+            function table(grouperElem, tablerows, {sort = false, filter = false}) {
+                const tableElem = document.createElement('table');
+                const theadElem = document.createElement('thead');
+                const tbodyElem = document.createElement('tbody');
+                //const sortSequence = [];
+
+                const headertr = document.createElement('tr');
+                for (const header of tablerows.shift())
+                    headertr.appendChild(initializeHTML('th', {textContent: header}));
+                theadElem.appendChild(headertr);
+
+                for (const rows of tablerows) {
+                    const trElem = document.createElement('tr');
+                    for (const items of rows)
+                        trElem.appendChild(initializeHTML('td', {textContent: items}))
+                    tbodyElem.appendChild(trElem);
+                }
+
+                for (const element of [theadElem, tbodyElem])
+                    tableElem.appendChild(element);
+                
+                grouperElem.appendChild(tableElem)
             }
-
-
-            /* const jsonObject = await AsyncFunc.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
-            const elite = new Set(), nonelite = new Set(), tbody = document.createElement('tbody');
-
-            for (const {passive_skill, code} of jsonObject)
-                (String(passive_skill).includes('200304') ? nonelite : elite).add(code)
-
-            for (const [index, [unitE, unitNE]] of enumerate(zip(true, elite, nonelite))) {
-                const trElem = document.createElement('tr');
-
-                const tdElems = [
-                    initializeHTML('td', {textContent: index + 1}),
-                    initializeHTML('td', {textContent: unitE}),
-                    initializeHTML('td', {textContent: unitNE ?? ''})
-                ]
-
-                for (const elements of tdElems)
-                    trElem.appendChild(elements);
-
-                tbody.appendChild(trElem);
-            }
-
-            document.querySelector('table').appendChild(tbody); */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            /* const list = document.createElement('dl');
-
-            for (const {name, reference, fragments} of (await AsyncFunc.getJSON('./units.json')).slice(0, -1)) {
-                //name
-                list.appendChild(initializeHTML('dt', {textContent: name}));
-
-                //reference
-                for (const [referenceName, link] of Object.entries(reference))
-                    if (referenceName)
-                        list.appendChild(initializeHTML('dd a', {textContent: referenceName, href: link}));
-
-                //fragments
-                if (fragments.length > 0)
-                    list.appendChild(initializeHTML('dd', {textContent: `Fragment Locations: ${fragments.join(', ')}`}));
-            }
-
-            document.getElementById('chars').appendChild(list); */
         </script>
 
         <meta charset='utf-8'>
@@ -94,20 +64,13 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html">"Unit stats"</include>
+        <include src="/univasset/scripts/pageheader/header.html">"Unit stat table"</include>
 
         <div class="container">
             <section id="main_content">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>No</th>
-                            <th>Elites</th>
-                            <th>Non-Elites</th>
-                        </tr>
-                    </thead>
-                    <!--tbody></tbody-->
-                </table>
+                <div></div>
+                <br>
+                <p>All units at Lv.70 and 5★.</p>
             </section>
         </div>
     </body>
