--- a/PNC/index.html
+++ b/PNC/index.html
@@ -28,9 +28,9 @@
 
         <div class="container">
             <section id="main_content">
-                <p><a href="./algorithm.html">Algorithm Stats</a></p>
-                <p><a href="./units.html">Unit Info</a></p>
-                <p><a href="./googledocs.html">Guides</a></p>
+                <p><a href="./algorithm">Algorithm Stats</a></p>
+                <p><a href="./units">Unit Info</a></p>
+                <p><a href="./googledocs">Guides</a></p>
             </section>
         </div>
     </body>
