--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -63,6 +63,14 @@
         <title>PNC Units Stats | Random Scraps</title>
     </head>
 
+    <style>
+        table {
+            table-layout: fixed;
+            max-width: 100%;
+            overflow: scroll;
+        }
+    </style>
+
     <body>
         <include src="/univasset/scripts/pageheader/header.html">"Unit stat table"</include>
 
