--- a/PNC/index.html
+++ b/PNC/index.html
@@ -29,6 +29,7 @@
         <div class="container">
             <section id="main_content">
                 <p><a href="./algorithm">Algorithm Stats</a></p>
+                <p><a href="./unitstats">Unit Stats</a></p>
                 <p><a href="./units">Unit Info</a></p>
                 <p><a href="./googledocs">Guides</a></p>
             </section>
