--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -8,20 +8,16 @@
             const jsonObject = await AsyncFunc.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
             const elite = new Set(), nonelite = new Set(), tbody = document.createElement('tbody');
 
-            for (const {passive_skill, code} of jsonObject)
-                (String(passive_skill).includes('200304') ? nonelite : elite).add(code)
+            for (const {passive_skill, code} of jsonObject) (String(passive_skill).includes('200304') ? nonelite : elite).add(code);
 
             for (const [index, [unitE, unitNE]] of Object.entries(Array.from(zip(true, elite, nonelite)))) {
                 const trElem = document.createElement('tr');
 
-                const tdElems = [
+                trElem.append(
                     initializeHTML('td', {textContent: Number(index) + 1}),
                     initializeHTML('td', {textContent: unitE}),
                     initializeHTML('td', {textContent: unitNE ?? ''})
-                ]
-
-                for (const elements of tdElems)
-                    trElem.appendChild(elements);
+                );
 
                 tbody.appendChild(trElem);
             }
