--- a/PNC/units.html
+++ b/PNC/units.html
@@ -11,16 +11,19 @@
                 list.appendChild(initializeHTML('dt', {textContent: name}));
 
                 //reference
-                for (const [referenceName, link] of Object.entries(reference))
-                    if (referenceName)
-                        list.appendChild(initializeHTML('dd a', {textContent: referenceName, href: link}));
+                //for (const [referenceName, link] of Object.entries(reference))
+                //    if (referenceName)
+                //        list.appendChild(initializeHTML('dd a', {textContent: referenceName, href: link}));
+
+                for (const [referenceName, link] of Object.entries(reference).filter(x => x[0]))
+                    list.appendChild(initializeHTML('dd a', {textContent: referenceName, href: link}));
 
                 //fragments
-                if (fragments.length > 0)
+                if (fragments.length)
                     list.appendChild(initializeHTML('dd', {textContent: `Fragment Locations: ${fragments.join(', ')}`}));
             }
 
-            document.getElementById('chars').appendChild(list);
+            document.querySelector('main_content div').appendChild(list);
         </script>
 
         <meta charset='utf-8'>
@@ -48,7 +51,7 @@
 
         <div class="container">
             <section id="main_content">
-                <div id="chars"></div>
+                <div></div>
                 <br>
                 <h3>Notes:</h3>
                 <p>All units can get fragments through Intimacy and Neural Kits.</p>
